moved setup to app.js modified the grid, now it has to be 90% from gcbrowser

--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,11 @@ body{
     
     
 }
-
+/*FIX THE GRID PARA QUE SE VEA BIEN TIENE QUE ESTAR SIMÉTRICO*/
 .main{
-    max-width: 1120px;
+    max-width: 660px;
     margin: 0 auto;
-    margin-top: 20px
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
